vendor/tt-call/tests/ui/type-array-bad-len.stderr
error: no rules expected the token `@`
 --> tests/ui/type-array-bad-len.rs:5:20
  |
5 |     input = [{ [T; @] }]
  |                    ^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
